<resources>
    <string name="app_name">Evnts</string>

    <!-- Events -->
    <string name="btn_show_more_details_label">Detalhes</string>
    <string name="btn_refresh_label">Atualizar</string>

    <string name="events_blank_state_title">Oops...</string>
    <string name="events_blank_state_msg">Parece que não temos nenhum evento ainda.</string>

    <!-- Event Details -->
    <string name="btn_show_more_text_label">mostrar mais</string>
    <string name="btn_show_less_text_label">mostrar menos</string>
    <string name="btn_check_in_label">Check-in</string>
    <string name="btn_share_label">Compartilhar</string>
    <string name="event_location_title">Localização do evento</string>
    <string name="share_body">Evento: %1s\nData do evento: %2s\nPara saber mais acesse: http://5f5a8f24d44d640016169133.mockapi.io/api/events/%3$s</string>
    <string name="share_no_title">Sem título</string>
    <string name="share_no_date">Sem data</string>

    <!-- Event Check-in -->
    <string name="input_hint_name">Nome</string>
    <string name="input_hint_email">Email</string>
    <string name="btn_confirm_label">Confirmar</string>
    <string name="toast_success">Check-in feito com sucesso</string>
</resources>