<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.Events">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rViewEvents"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:listitem="@layout/recycler_view_event" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/containerBlankState"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imgBlankState"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_over_components"
            android:contentDescription="@string/cd_img_blank_state"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/ic_no_events" />

        <TextView
            android:id="@+id/txtBlankStateTitle"
            android:layout_width="@dimen/match_constraint"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_between_elements"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="@dimen/space_between_elements"
            android:fontFamily="@font/montserrat_500"
            android:gravity="center"
            android:text="@string/events_blank_state_title"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imgBlankState"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/txtBlankStateMsg"
            android:layout_width="@dimen/match_constraint"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_between_elements"
            android:layout_marginTop="@dimen/space_between_elements"
            android:layout_marginEnd="@dimen/space_between_elements"
            android:fontFamily="@font/montserrat_400"
            android:gravity="center"
            android:text="@string/events_blank_state_msg"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtBlankStateTitle"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/btnRefresh"
            style="@style/ButtonRefresh"
            android:layout_width="@dimen/match_constraint"
            android:layout_height="wrap_content"
            android:text="@string/btn_refresh_label"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtBlankStateMsg"
            app:layout_constraintVertical_bias="1.0" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>